adding phone number to header + changing site title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
 <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}}); background-color: {{site.data.settings.images.hero_background_hex}}">
         <!-- logo -->
         <a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>
+        <div class="header-phone"><a href="tel:208-919-2424">208-919-2424</a></div>
         <!-- title -->
         <a href="/"><h1 class="site-title">{{site.data.settings.images.hero_text | replace: '-- MARKET --', site.data.settings.client.market}}</h1></a>
 			</div>
