--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -18,33 +18,38 @@
 	color: $brand
 	// text-shadow: $header-shadow
 	text-transform: uppercase
-	font-size: 6.5rem
+	font-size: 6rem
 	font-weight: 400
 	padding-bottom: 4rem
 	margin-bottom: 0
 
+.header-phone
+	font-size: 5rem
+
 @media (max-width: 1100px)
 	.site-title
-		font-size: 5rem
+		font-size: 3.5rem
 
 @media (max-width: 1000px)
 	.site-logo
-		max-width: 20rem
+		max-width: 30rem
 
 @media (max-width: 760px)
 	#hero
 		// height: 33rem
 	.site-logo
-		max-width: 20rem
+		max-width: 30rem
 		margin-top: 4rem
 	.site-title
-		font-size: 5rem
+		font-size: 4rem
+	.header-phone
+		font-size: 4rem
 
 @media (max-width: 600px)
 	#hero
 		// height: 31rem
 	.site-logo
-		max-width: 15rem
+		max-width: 20rem
 		margin-top: 2rem
 	.site-title
 		font-size: 3.5rem
