--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -31,3 +31,13 @@
 	.navbar-brand
 		color: #fff
 		margin-top: 10px
+		
+.client-testimonial
+	margin-top: 10px
+
+.testimonial-text
+	font-style: italic
+
+.testimonial-author
+	color: #b40101
+	margin-top: -20px
