--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,14 @@
 <header id="hero">
 <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}}); background-color: {{site.data.settings.images.hero_background_hex}}">
         <!-- logo -->
-        <a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>
+        <a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" />
+				</a>
         <!-- title -->
-        <a href="/"><h1 class="site-title">{{site.data.settings.images.hero_text | replace: '-- MARKET --', site.data.settings.client.market}}</h1></a>
+        <a href="/"><h1 class="site-title">{{site.data.settings.images.hero_text}}</h1></a>
 			</div>
+			<div class="header-contact">
+			<a href="tel:{{site.data.settings.client.phone}}">{{site.data.settings.client.phone}}</a>
+			<a href="mailto:{{site.data.settings.client.email}}">{{site.data.settings.client.email}}</a>
+			<a href="{{site.data.settings.client.url}}">{{site.data.settings.client.url | remove: 'http://'}}</a>
+		</div>
 </header>
