adding pages - vendors, testimonials, agents

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -27,3 +27,11 @@
 	.navbar-brand
 		color: #fff
 		margin-top: 10px
+
+.our-agents
+	a
+		font-size: 30px
+		text-transform: uppercase
+
+.vendors
+	font-size: 18px
