--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -5,7 +5,7 @@
 	text-align: center
 	font-size: 18px
 	hr
-		border-top: 2px solid $brand
+		border-top: 2px solid #12A89D
 	address
 		font-style: normal
 @media(max-width: 500px)
