Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,7 +75,7 @@
 	        {% include socials.html %}
 	    </div>
 	  </div>
-	  <p class="disclosure">Securities and advisory services offered through FSC Securities Corporation, member FINRA/SIPC. Michigan 401k and Financial Independence are marketing names.</p>
+	  <p class="disclosure">Securities and investment advisory services offered through FSC Securities Corporation (FSC), member <a href="http://www.finra.org/">FINRA</a> / <a href="http://www.sipc.org/">SIPC</a>. FSC is separately owned and other entities and/or marketing names, products or services referenced here are independent of FSC. <br> Michigan 401k and Financial Independence are marketing names.</p>
 	  <div class="attribution">
 			{% if site.data.settings.client.brand != null %}
 				<p>&copy;{{ site.time | date: '%Y' }} {{site.data.settings.client.brand}}</p>
