--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,6 +16,11 @@
 					{% include contact-modal.html %}
 				</div>
 			</div>
+			<div class="row" id="welcome">
+				<div class="col-lg-12 welcome-box" id="welcome-box">
+					{% include welcome-box.html %}
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-lg-10 col-lg-offset-1">
 					{{ content }}
