--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,11 @@
 		{% include header.html %}
 
   	<div class="container-fluid">
+			<div class="row" id="welcome">
+				<div class="col-lg-12 welcome-box" id="welcome-box">
+					{% include welcome-box.html %}
+				</div>
+			</div>
 
 				<div class="col-sm-12 visible-xs visible-sm sidebar">
 					{% include socials.html %}
