--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -9,7 +9,11 @@
 		{% include header.html %}
 
   	<div class="container-fluid">
-
+			<div class="row" id="welcome">
+				<div class="col-lg-12 welcome-box" id="welcome-box">
+					{% include welcome-box.html %}
+				</div>
+			</div>
 				<div class="col-sm-12 visible-xs visible-sm sidebar">
 					{% include socials.html %}
 					{% include search-box.html %}
