added bio and changes cta photos

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -25,4 +25,9 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="about-container">
+			<p class="about-text">{{site.data.settings.client.about_markdown}}</p>
+		</div>
+	</div>
 </div>
