--- a/_sass/_buttons.sass
+++ b/_sass/_buttons.sass
@@ -1,5 +1,5 @@
 .cta
-	background: $button-background
+	background: transparent
 	color: $button-text
 	// padding: 1.3rem 2rem
 	text-transform: capitalize
