--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -2,7 +2,7 @@
 	border-bottom: 2px solid $theme
 	border-radius: 0
 	min-height: 52px
-	background: #ffffff
+	background: rgba(250, 250, 250, .75)
 	width: 100%
 	overflow: hidden
 
@@ -20,7 +20,7 @@
 	// @include transition
 
 .navbar-left>li>a
-	background: $button-background
+	background: transparent
 	color: black
 	// padding: 1.3rem 2rem
 	text-transform: capitalize
