--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@
 
 				<div class="col-sm-12 visible-xs visible-sm sidebar">
 					{% include socials.html %}
+					{% include previous-posts.html %}
 					{% include search-box.html %}
 				</div>
 			<div class="col-lg-7 col-md-7 col-lg-offset-1">
