fixing optin firefox iss

--- a/_sass/_newsletter.sass
+++ b/_sass/_newsletter.sass
@@ -21,6 +21,7 @@
 		font-size: 2rem
 		padding: 2.4rem
 		width: 70%
+		height: auto
 		display: inline-block
 		margin-right: 1rem
 		@include transition(0.3s)
