adding sidebar content, moving post library to top

--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,3 +1,5 @@
+<h5>Watch This informative 19 Second Video to Learn More</h5>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-nXatvp3HZ0" frameborder="0" allowfullscreen></iframe>
 {% for cta in site.data.settings.sidebar_CTA %}
 <div class="cta-sidebar-container">
 	<div class="cta-img-container">
@@ -54,3 +56,9 @@
 	</div>
 </div>
 {% endfor %}
+
+<h5>TV Spots</h5>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/WKanb9f2yQY" frameborder="0" allowfullscreen></iframe>
+<br />
+<iframe width="560" height="315" src="https://www.youtube.com/embed/AnO1Dniy-aY" frameborder="0" allowfullscreen></iframe>
+<br>
