adding slogan to header and about

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,5 +4,6 @@
         <a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>
         <!-- title -->
         <a href="/"><h1 class="site-title">{{site.data.settings.images.hero_text | replace: '-- MARKET --', site.data.settings.client.market}}</h1></a>
+        <p class="slogan"><a href="tel:210-215-4400">It doesn't cost a penny to talk... so call me right now and I will answer your questions!</a></p>
 			</div>
 </header>
