--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -58,3 +58,14 @@
 	&:active
 		box-shadow: 0 0 0 $brand-light
 		@include transform(translateY(0rem))
+
+.slogan
+	font-size: 20px
+	font-style: italic
+	font-weight: 600
+	margin-bottom: 0
+	padding-bottom: 40px
+
+#about-slogan
+	text-align: left
+	// margin-bottom: 20px
