--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,3 +1,4 @@
+<img src="/img/logo.png" class="site-logo">
 <h4>Watch This informative 19 Second Video to Learn More</h4>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-nXatvp3HZ0" frameborder="0" allowfullscreen></iframe>
 <br>
