--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -60,7 +60,7 @@
 		@include transform(translateY(0rem))
 
 .slogan
-	font-size: 20px
+	font-size: 5rem
 	font-style: italic
 	font-weight: 600
 	margin-bottom: 0
