--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -1,7 +1,7 @@
 .hero-img
 	background-position: center
 	background-size: cover
-	padding-top: $nav-height + 5rem
+	padding-top: $nav-height + 3rem
 #hero
 	background-position: center
 	background-size: cover
@@ -10,17 +10,19 @@
 	text-align: center
 
 .site-logo
-	width: 90%
+	width: 50%
+	margin-left: 25%
 	max-width: $logo-width
-	@include filter(drop-shadow($header-shadow))
+	// @include filter(drop-shadow($header-shadow))
 
 .site-title
 	color: $brand
 	text-shadow: $header-shadow
 	text-transform: uppercase
-	font-size: 6.5rem
+	font-size: 7rem
 	// padding-bottom: 4rem
-	margin-bottom: 0
+	padding-bottom: 3rem
+	margin-top: -25px
 	font-weight: 300
 
 @media (max-width: 1100px)
