making font in header responsive, fixing minimized nav bar

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -19,13 +19,13 @@
 
 
 
-.fa-bars
-	color: #fff
-
-.navbar-andross
-	.navbar-brand
-		color: #fff
-		// margin-top: 10px
+// .fa-bars
+// 	color: #fff
+//
+// .navbar-andross
+// 	.navbar-brand
+// 		color: #fff
+// 		// margin-top: 10px
 #side-logo
 	width: 90%
 	margin: 0 auto
@@ -58,13 +58,6 @@
 	&:active
 		box-shadow: 0 0 0 $brand-light
 		@include transform(translateY(0rem))
-
-.slogan
-	font-size: 5rem
-	font-style: italic
-	font-weight: 600
-	margin-bottom: 0
-	padding-bottom: 40px
 
 #about-slogan
 	text-align: left
