--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -25,9 +25,18 @@
 	margin-top: -25px
 	font-weight: 300
 
+.slogan
+	font-size: 5rem
+	font-style: italic
+	font-weight: 600
+	margin-bottom: 0
+	padding-bottom: 40px
+
 @media (max-width: 1100px)
 	.site-title
-		font-size: 5rem
+		font-size: 4rem
+	.slogan
+		font-size: 4rem
 
 @media (max-width: 1000px)
 	.site-logo
@@ -38,9 +47,11 @@
 		// height: 33rem
 	.site-logo
 		max-width: 20rem
-		margin-top: 4rem
+		margin-top: 3rem
 	.site-title
-		font-size: 5rem
+		font-size: 3rem
+	.slogan
+		font-size: 3rem
 
 @media (max-width: 600px)
 	#hero
@@ -49,7 +60,9 @@
 		max-width: 15rem
 		margin-top: 2rem
 	.site-title
-		font-size: 3.5rem
+		font-size: 2.5rem
+	.slogan
+		font-size: 2.5rem
 	.cta
 		padding: 1rem
 @media (max-width: 400px)
