edits per client

--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,4 +1,7 @@
 {% for cta in site.data.settings.sidebar_CTA %}
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uuA7hW_drEM" frameborder="0" allowfullscreen></iframe><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QCoh9sEkXJ8" frameborder="0" allowfullscreen></iframe><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2CpA9VBgs4I" frameborder="0" allowfullscreen></iframe>
 <div class="cta-sidebar-container">
 	<div class="cta-img-container">
 		{% if cta.CTA_link_text == null or cta.CTA_url == null%}
