--- a/_includes/about.html
+++ b/_includes/about.html
@@ -21,5 +21,8 @@
 			<div class="contact-text"><strong>Robert Crow</strong>
 			</div>
 		</div>
+		<div class="col-lg-12">
+		<p class="bio">The team at Imagine Realty (Tim Majka, Corrinne Wallace, Robert Crow, Barbara Espinoza, Joyce Pineda, and Jackie Catolico) specialize in residential and residential income property throughout Long Beach and the greater Los Angeles and Orange County area. Imagine Realty has over 50 years combined experience in the real estate industry and is ranked in the top 1% of real estate teams in Southern California.</p>
+		</div>
 	</div>
 </div>
