--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -1,3 +1,4 @@
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YQ6v2lDizIE" frameborder="0" allowfullscreen></iframe>
 {% for cta in site.data.settings.sidebar_CTA %}
 <div class="cta-sidebar-container">
 	<div class="cta-img-container">
