adding recruiting page and form

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -31,3 +31,15 @@
 	.navbar-brand
 		color: #fff
 		margin-top: 10px
+
+.recruiting
+	text-align: center
+
+#recruit
+	width: 75%
+	margin-left: 13%
+	margin-top: 2rem
+
+#recruiting-photo
+	float: right
+	margin: 20px
