--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@
 			{% include audit.html %}
 		{% endif %}
 		{% include header.html %}
-		<div class="container-fluid">
+		<div class="container-fluid" id="recruit">
 			<div class="row">
 				<div class="col-sm-12">
 
