--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
 		{% if site.data.settings.audit_header == true %}
 			{% include audit.html %}
 		{% endif %}
-		{% include header.html %}
+		{% include page-header.html %}
 		<div class="container-fluid" id="recruit">
 			<div class="row">
 				<div class="col-sm-12">
