--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -41,9 +41,15 @@
 	margin-top: 2rem
 	font-size: 18px
 
-#recruiting-photo
+.recruiting-photo
 	float: right
 	margin: 20px
 
 #page-bkg
 	height: 250px
+
+.caption
+	font-size: 16px
+	font-style: oblique
+	text-align: center
+	margin-bottom: 20px
