Updated '_includes/about.html' via CloudCannon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,6 +14,8 @@
 			</div>
 			<div class="contact-text"><strong>Gwen Margolis</strong><br>
 			R(S) - 66941<br>
+			<a href="mailto:ronmargolis@kw.com">ronmargolis@kw.com</a><br>
+			<a href="tel:1-808-346-7095">808-346-7095</a>
 			</div>
 		</div>
 		<div class="col-md-4">
