Updated '_includes/about.html' via CloudCannon

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,6 +6,8 @@
 			</div>
 			<div class="contact-text"><strong>Ron Margolis</strong><br>
 			R(B) 20918<br>
+			<a href="mailto:ronmargolis@kw.com">ronmargolis@kw.com</a><br>
+			<a href="tel:1-808-346-7095">808-346-7095</a>
 			</div>
 		</div>
 		<div class="col-md-4">
@@ -14,8 +16,8 @@
 			</div>
 			<div class="contact-text"><strong>Gwen Margolis</strong><br>
 			R(S) - 66941<br>
-			<a href="mailto:ronmargolis@kw.com">ronmargolis@kw.com</a><br>
-			<a href="tel:1-808-346-7095">808-346-7095</a>
+			<a href="mailto:gwenmargolis@gmail.com">gwenmargolis@gmail.com</a><br>
+			<a href="tel:1-808.346.0357">808-346-0357</a>
 			</div>
 		</div>
 		<div class="col-md-4">
@@ -24,6 +26,8 @@
 			</div>
 			<div class="contact-text"><strong>Bailey Hutton</strong><br>
 			R(S) - 79027<br>
+			<a href="mailto:baileyhutton@kw.com">baileyhutton@kw.com</a><br>
+			<a href="tel:1-808-635-2812">808-635-2812</a>
 			</div>
 		</div>
 	</div>
