Updated '_includes/newsletter.html' via CloudCannon

--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,7 +1,7 @@
 <!-- Newsletter optin form -->
 <div class="newsletter">
       <div class="news-column-left">
-        <h2>Sign Up for Our Newsletter</h2>
+        <h2>Sign Up for Our Newsletters</h2>
         <p>Get up-to-date Real Estate news and tips every month</p>
 			</div>
 				<div class="news-col-right">
