--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -45,3 +45,25 @@
 .testimonial-author
 	color: #b40101
 	margin-top: -20px
+
+.recruiting
+	text-align: center
+
+#recruit
+	width: 75%
+	margin-left: 13%
+	margin-top: 2rem
+	font-size: 18px
+
+.recruiting-photo
+	float: right
+	margin: 20px
+
+#page-bkg
+	height: 310px
+
+.caption
+	font-size: 16px
+	font-style: oblique
+	text-align: center
+	margin-bottom: 20px
