--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,8 +1,13 @@
 <header id="hero">
 <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}}); background-color: {{site.data.settings.images.hero_background_hex}}" id="page-bkg">
-        <!-- logo -->
-        <!-- <a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>
-        <a href="/"><img src="{{site.data.settings.images.hero_logo_path-2}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>-->
-        <a href="/"><h1 class="site-title">More Consistent Comissions</h1></a> 
+        {% if page.tags contains "Join Our Team"%}
+        <h1 class="site-title">EARN a Consistent Income as a Real Estate Agent</h1>
+        {% endif %}
+        {% if page.tags contains "HH & E"%}
+        <h1 class="site-title">More Consistent Comissions</h1>
+        {% endif %}
+        {% if page.tags contains "9 to 5"%}
+        <h1 class="site-title">Get Your Job Security Back</h1>
+        {% endif %}
 			</div>
 </header>
