--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -53,3 +53,8 @@
 	font-style: oblique
 	text-align: center
 	margin-bottom: 20px
+	
+.float-left
+    float: left
+    margin: 20px
+    width: 50%
