Updated '_sass/_custom.sass' via CloudCannon

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -55,6 +55,6 @@
 	margin-bottom: 20px
 	
 .float-left
-    float: left
-    margin: 20px
-    width: 50%
+	float: right
+	margin: 20px
+	width: 50%
