--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -22,6 +22,16 @@
 	padding-bottom: 4rem
 	margin-bottom: 0
 	font-weight: bold
+	
+#long-title
+	color: $header-font-color
+	text-shadow: $header-shadow
+	text-transform: uppercase
+	font-size: 5.5rem
+	padding-bottom: 4rem
+	margin-bottom: 0
+	font-weight: bold
+	
 @media (max-width: 1100px)
 	.site-title
 		font-size: 5rem
