--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
 		{% if site.data.settings.audit_header == true %}
 			{% include audit.html %}
 		{% endif %}
-		{% include page-header.html %}
+		{% include header.html %}
 		<div class="container-fluid" id="recruit">
 			<div class="col-lg-10 col-lg-offset-1">
 				{{ content }}
