Updated '_includes/page-header.html' via CloudCannon

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,7 +1,7 @@
 <header id="hero">
 <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}}); background-color: {{site.data.settings.images.hero_background_hex}}" id="page-bkg">
         {% if page.tags contains "Join Our Team"%}
-        <h3 id="long-title">EARN a Consistent Income as a Real Estate Agent</h3>
+        <h3 id="long-title">EARN a <em>Consistent</em> Income as a Real Estate Agent</h3>
         {% endif %}
         {% if page.tags contains "HH & E"%}
         <h1 class="site-title">More Consistent Comissions</h1>
