--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -7,27 +8,15 @@
 		{% if site.data.settings.audit_header == true %}
 			{% include audit.html %}
 		{% endif %}
-		{% include header.html %}
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-12">
-
-					{% include navigation.html %}
-					{% include contact-modal.html %}
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-10 col-lg-offset-1">
-					{{ content }}
-				</div>
-
-			<!-- Sidebar Content // Hidden on mobile -->
+		{% include page-header.html %}
+		<div class="container-fluid" id="recruit">
+			<div class="col-lg-10 col-lg-offset-1">
+				{{ content }}
 			</div>
 
+		<!-- Sidebar Content // Hidden on mobile -->
+		</div>
 			</div>
-			{% include newsletter.html %}
-			{% include testimonials.html %}
-			{% include bottom-navigation.html %}
-			{% include footer.html %}
-  </body>
+		{% include footer.html %}
+	</body>
 </html>
