--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,27 +7,17 @@
 		{% if site.data.settings.audit_header == true %}
 			{% include audit.html %}
 		{% endif %}
-		{% include header.html %}
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-12">
+		{% include page-header.html %}
+		<div class="container-fluid" id="recruit">
 
-					{% include navigation.html %}
-					{% include contact-modal.html %}
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-10 col-lg-offset-1">
-					{{ content }}
-				</div>
+						<div class="col-lg-10 col-lg-offset-1">
+							{{ content }}
+						</div>
 
-			<!-- Sidebar Content // Hidden on mobile -->
-			</div>
+					<!-- Sidebar Content // Hidden on mobile -->
+					</div>
 
-			</div>
-			{% include newsletter.html %}
-			{% include testimonials.html %}
-			{% include bottom-navigation.html %}
-			{% include footer.html %}
-  </body>
-</html>
+					</div>
+					{% include footer.html %}
+		  </body>
+		</html>
