layout changes from client

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,6 +22,10 @@
 				{% if site.data.settings.client.license_number != null %}
 				{{ site.data.settings.client.license_number }}</br>
 				{% endif %}
+				<b>{{ site.data.settings.client.name2 }}</b><br />
+				{% if site.data.settings.client.license_number2 != null %}
+				{{ site.data.settings.client.license_number2 }}</br>
+				{% endif %}
 				{{ site.data.settings.client.brand }}<br />
 				{% if site.data.settings.client.brokerage != null %}
 				{{ site.data.settings.client.brokerage }}<br />
