--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -19,12 +19,18 @@
 	font-size: 3rem
 	text-align: left
 	padding-left: 10px
+	color: black
+
 .post-title
 	font-size: 5rem
 	text-align: left
+	color: black
 
 .post-link
+	color: black
 	@include transition(all .3s ease-in-out)
+	&:hover
+		color: #3F678B
 
 .post-image
 	width: 100%
@@ -144,7 +150,7 @@
 	.post-title
 		font-size: 5rem
 		margin: 2rem 0
-		color: $header-font-color
+		color: black
 		text-transform: uppercase
 		text-shadow: $header-shadow
 
