--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,61 +1,14 @@
 <div class="container-fluid footer">
 <div class="container footer">
-	    <div class="row footer-pad">
-	      {% comment %} if something is missing from the contact info it won't print extra columns {% endcomment %}
-	      {% if site.data.settings.client.brand == null and site.data.settings.client.brokerage == null %}
-	        <div class="col-sm-6">
-	          <span itemprop="founder">{{site.data.settings.client.name}}</span>
-						{% if site.data.settings.client.license_number != null %}
-						<br><span>{{site.data.settings.client.license_number }}
-					{% endif %}
-	        </div>
-	        <div class="col-sm-6">
-	          <address itemprop="address">{{site.data.settings.client.address}}</address>
-	        </div>
-	      {% elsif site.data.settings.client.brand == null %}
-	        <div class="col-sm-4">
-	          <span itemprop="founder">{{site.data.settings.client.name}}</span>
-						{% if site.data.settings.client.license_number != null %}
-						<br><span>{{site.data.settings.client.license_number }}
-							{% endif %}
-	        </div>
-	        <div class="col-sm-4">
-	          <span itemprop="branchof">{{site.data.settings.client.brokerage}}</span>
-	        </div>
-	        <div class="col-sm-4">
-	          <address itemprop="address">{{site.data.settings.client.address}}</address>
-	        </div>
-	      {% elsif site.data.settings.client.brokerage == null  %}
-	        <div class="col-sm-4">
-	          <span itemprop="founder">{{site.data.settings.client.name}}</span>
-						{% if site.data.settings.client.license_number != null %}
-						<br><span>{{site.data.settings.client.license_number }}
-					{% endif %}
-	        </div>
-	        <div class="col-sm-4">
-	          <span itemprop="brand">{{site.data.settings.client.brand}}</span>
-	        </div>
-	        <div class="col-sm-4">
-	          <address itemprop="address">{{site.data.settings.client.address}}</address>
-	        </div>
-	      {% else %}
-	        <div class="col-sm-3">
-	          <span itemprop="founder">{{site.data.settings.client.name}}</span>
-						{% if site.data.settings.client.license_number != null %}
-						<br><span>{{site.data.settings.client.license_number }}
-					{% endif %}
-	        </div>
-	        <div class="col-sm-3">
-	          <span itemprop="brand">{{site.data.settings.client.brand}}</span>
-	        </div>
-	        <div class="col-sm-3">
-	          <span itemprop="branchof">{{site.data.settings.client.brokerage}}</span>
-	        </div>
-	        <div class="col-sm-3">
-	          <address itemprop="address">{{site.data.settings.client.address}}</address>
-	        </div>
-	      {% endif %}
-	    </div>
+	    <div class="row">
+				<div class="col-sm-6">
+					<b>{{ site.data.settings.client.name }}</b>  |  {{ site.data.settings.client.license_number }}
+				</div>
+				<div class="col-sm-6">
+					<b>{{ site.data.settings.client.name2 }}</b>  |  {{ site.data.settings.client.license_number2 }}
+				</div>
+			</div>
+
 	    <hr>
 	    <div class="row">
 	      <div class="col-sm-4">
@@ -81,6 +34,9 @@
 			{% else %}
 				<p>&copy;{{ site.time | date: '%Y' }} {{site.data.settings.client.name}}</p>
 			{% endif %}
+			<img src="/img/remax.png" style="width:100px;">
+			<br>
+			<br>
 	    Proudly Brought To You By
 	    <a href="http://getvyral.com" target="_blank">
 				Vyral Marketing</a><br>
