--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -87,7 +87,8 @@ body
   margin: 0
   background: $theme-body-color
   animation: 1s ease-in-out fadein
-
+  font-size: 18px
+  
 h1, h2, h3, h4, h5, h6
   font-family: $headerfont
   font-weight: 200
