--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -29,6 +29,11 @@
 .post-image
 	width: 100%
 
+.post-image-small
+	width: 25%
+	float: left
+	padding: 20px 20px 20px 0
+
 .post-image-container
 	padding: 0
 .excerpt
