pull quote share on facebook not twitter

--- a/_includes/pullquote.html
+++ b/_includes/pullquote.html
@@ -1,1 +1,3 @@
-<a href="https://twitter.com/home/?status={{page.pullquote}}%20{{site.url}}{{page.url}}%20via%40{{site.data.settings.socials.twitter | remove: 'https://twitter.com/'}}" target='_blank' class="pullquote">&#8220;{{page.pullquote}}&#8221;</a>
+<a  href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}"
+onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;" data-toggle="tooltip" title="Share on Facebook" itemprop="Facebook" class="pullquote">&#8220;{{page.pullquote}}&#8221;
+</a>
