--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -119,7 +119,7 @@
 		content: ""
 		height: 2rem
 		width: rem(41)
-		background: url(/img/svg/tweetlink.svg)
+		background: url(/img/svg/fblink.svg)
 		background-size: cover
 		background-position: right
 		display: inline-block
