changing title and adding photo credit

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header id="hero">
 <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}}); background-color: {{site.data.settings.images.hero_background_hex}}">
+        <div class="photo-credit"><a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">Photo By Tracie Hall Under Creative Commons License</a></div>
         <!-- logo -->
         <a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>
         <!-- title -->
