--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -22,6 +22,15 @@
 	padding-bottom: 4rem
 	margin-bottom: 0
 
+.photo-credit
+	float: right
+	margin-top: -4.5rem
+	margin-right: 10px
+	a
+		color: #999
+		&:hover
+			color: white
+
 @media (max-width: 1100px)
 	.site-title
 		font-size: 5rem
@@ -29,6 +38,10 @@
 @media (max-width: 1000px)
 	.site-logo
 		max-width: 20rem
+
+@media (max-width: 850px)
+	.photo-credit
+		margin-top: -4rem
 
 @media (max-width: 760px)
 	#hero
