fixing post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,9 +33,9 @@
 					</div>
 				</article>
 			</div>
-			<div class="row">
+			<!-- <div class="row">
 				{% include share-buttons.html %}
-			</div>
+			</div> -->
 		<!-- </div> -->
 	</main>
 			</div>
@@ -43,8 +43,8 @@
 				{% include socials.html %}
 				{% include search-box.html %}
 				<!-- {% include cta-sidebar.html %} -->
-				{% include blog-archive-category.html %}
-				{% include reviews.html %}
+				<!-- {% include blog-archive-category.html %}
+				{% include reviews.html %} -->
 			</div>
 		</div>
 		<!-- {% include about.html%} -->
