--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 					{% include search-box.html %}
 					<!-- {% include cta-sidebar.html %}
 					{% include lender.html %} -->
-					{% include blog-archive-category.html %}
+					<!-- {% include blog-archive-category.html %} -->
 					<!-- {% include reviews.html %} -->
 				</div>
 			</div>
