fixing post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@
 
 
 	<main>
-		<!-- <div class="container"> -->
+		<div class="container">
 			<div class="row post-container">
 				<a href="{{page.url}}"><h1 class="post-title" itemprop="name headline">{{page.title}}</h1></a>
 				<!-- <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished" style="display: none;">{{ page.date | date: "%b %-d, %Y" }}</time> -->
@@ -36,7 +36,7 @@
 			<!-- <div class="row">
 				{% include share-buttons.html %}
 			</div> -->
-		<!-- </div> -->
+		</div>
 	</main>
 			</div>
 			<div class="col-md-5 col-lg-3 hidden-sm hidden-xs sidebar">
