--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -54,3 +54,12 @@
 	font-style: oblique
 	text-align: center
 	margin-bottom: 20px
+
+.indent
+	width: 80%
+	margin-left: 10%
+
+.indent-num
+	width: 80%
+	margin-left: 10%
+	list-style: decimal
