--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -32,8 +32,8 @@
 		color: #fff
 		margin-top: 10px
 
-.recruiting
-	text-align: center
+// .recruiting
+// 	text-align: center
 
 #recruit
 	width: 75%
@@ -53,8 +53,13 @@
 	font-style: oblique
 	text-align: center
 	margin-bottom: 20px
-	
+
 .float-left
 	float: left
 	margin: 20px
 	width: 50%
+
+
+.apply
+	width: 250px
+	// margin-left: 38%
