--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -27,7 +27,17 @@
 	@include transition(all .3s ease-in-out)
 
 .post-image
-	width: 100%
+	width: 50%
+	margin: auto
+	display: block
+
+.float-left
+	float: left
+	margin: 20px
+
+.float-right
+	float: right
+	margin: 20px
 
 .post-image-container
 	padding: 0
