--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -2,6 +2,6 @@
 <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}}); background-color: {{site.data.settings.images.hero_background_hex}}" id="page-bkg">
         <!-- logo -->
          <a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>
-        <a href="/"><h1 class="site-title">More Consistent Comissions</h1></a>
+        <a href="/"><h1 class="site-title">Make More, Keep More & Get More</h1></a>
 			</div>
 </header>
