--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -31,3 +31,25 @@
 	.navbar-brand
 		color: #fff
 		margin-top: 10px
+
+		.recruiting
+	text-align: center
+
+#recruit
+	width: 75%
+	margin-left: 13%
+	margin-top: 2rem
+	font-size: 18px
+
+.recruiting-photo
+	float: right
+	margin: 20px
+
+// #page-bkg
+// 	height: 250px
+
+.caption
+	font-size: 16px
+	font-style: oblique
+	text-align: center
+	margin-bottom: 20px
