--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -27,13 +27,16 @@
 	@include transition(all .3s ease-in-out)
 
 .post-image
+	width: 100%
+
+.in-post-image
 	width: 50%
 	margin: auto
 	display: block
 
 .float-left
 	float: left
-	margin: 20px
+	margin: 30px
 
 .float-right
 	float: right
