fixing mobile nav

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav role="navigation" class="navbar navbar-fixed-top navbar-andross">
 	<div class="navbar-header">
 		<a href="/" class="navbar-brand visible-xs" data-target="#navbarCollapse"	data-toggle="collapse">
-		{{site.data.settings.title | replace: "-- CLIENT BRAND --", site.data.settings.client.brand }}</a>
+		{{site.data.settings.client.brand }}</a>
 		<button type="button" data-target="#navbarCollapse"	data-toggle="collapse" class="navbar-toggle">
 			<span class="sr-only">Toggle navigation</span>
 			<i class="fa fa-bars fa-2x"></i>
@@ -26,7 +26,7 @@
 		{% endif %}
 
 		</ul>
-		<ul class="nav navbar-nav navbar-right">
+		<!-- <ul class="nav navbar-nav navbar-right">
 			{% if site.data.settings.CTAs.first_CTA_text and site.data.settings.CTAs.first_CTA_URL != null %}
 			<li>
 				{% if site.data.settings.CTAs.first_CTA_URL == '/homevalue/' %}
@@ -54,5 +54,5 @@
 			</li>
 			{% endif %}
 
-		</ul>
+		</ul> -->
 </nav>
