--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -31,7 +31,6 @@
 	&:hover
 		background: #eeeeee
 		color: $brand-dark
-		border-bottom: 4px solid $brand
 		// @include transform(scale(1.05))
 		// @include transform(translateY(-0.2rem))
 	&:active
@@ -55,7 +54,6 @@
 .navbar
 	padding-right: 15px
 	padding-left: 15px
-	height: 52px
 
 
 @media(max-width: 347px)
@@ -65,7 +63,7 @@
 	.navbar-header
 		a.navbar-brand
 			width: 0
-			overflow: hidden
+			// overflow: hidden
 			display: none
 			opacity: 0
 // .scroll-nav-color
