--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -63,14 +63,13 @@
 	font-size: 16px
 	+transition
 	&:hover
-		background: transparent
-		color: $brand-light
-		box-shadow: 4px 4px 0 $brand-light
-		border: 1px solid $brand-light
+		background: $accent
+		color: $light-text
+		border: 1px solid $accent
 		@include transform(scale(1.05))
 		@include transform(translateY(-0.2rem))
 	&:active
-		box-shadow: 0 0 0 $brand-light
+		box-shadow: 0 0 0 $accent
 		@include transform(translateY(0rem))
 
 
@@ -177,7 +176,7 @@
 	a
 		color: white
 		&:hover
-			color: $brand-light
+			color: $accent
 .post-share
 	text-align: center
 	padding-bottom: 0px
