--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,4 @@
 <header id="hero">
- <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}}); background-color: {{site.data.settings.images.hero_background_hex}}"> 
-<div class="hero-img" style="background-color: {{site.data.settings.images.hero_background_hex}}">
-        <!-- logo -->
-        <!-- title -->
-        <!--<a href="/"><h1 class="site-title">{{site.data.settings.images.hero_text | replace: '-- MARKET --', site.data.settings.client.market}}</h1></a>-->
-			</div>
-			<a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>
+ <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}});"> </div>
+	<a href="/"><img src="{{site.data.settings.images.hero_logo_path}}" alt="{{site.data.settings.client.company}}" class="site-logo" /></a>
 </header>
