--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -8,11 +8,13 @@
 	background-attachment: fixed
 	background-repeat: no-repeat
 	text-align: center
+	height: 350px
 
 .site-logo
 	width: 90%
 	max-width: $logo-width
 	@include filter(drop-shadow($header-shadow))
+	margin: 3rem
 
 .site-title
 	color: $header-font-color
@@ -28,13 +30,13 @@
 
 @media (max-width: 1000px)
 	.site-logo
-		max-width: 20rem
+		max-width: 30rem
 
 @media (max-width: 760px)
 	#hero
 		// height: 33rem
 	.site-logo
-		max-width: 20rem
+		max-width: 30rem
 		margin-top: 4rem
 	.site-title
 		font-size: 5rem
@@ -43,7 +45,7 @@
 	#hero
 		// height: 31rem
 	.site-logo
-		max-width: 15rem
+		max-width: 22rem
 		margin-top: 2rem
 	.site-title
 		font-size: 3.5rem
